// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`iTerm2 preset snapshots base 1`] = `
{
  "Ansi 0 Color": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 1 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 10 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.0784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.807843137254902,
    "Red Component": 0.0784313725490196,
  },
  "Ansi 11 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.7294117647058823,
    "Red Component": 0.7098039215686275,
  },
  "Ansi 12 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 13 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 14 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 15 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.6470588235294118,
    "Red Component": 0.6470588235294118,
  },
  "Ansi 2 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.48627450980392156,
    "Red Component": 0.06274509803921569,
  },
  "Ansi 3 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.5803921568627451,
  },
  "Ansi 4 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 5 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 6 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 7 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.3333333333333333,
    "Color Space": "sRGB",
    "Green Component": 0.3333333333333333,
    "Red Component": 0.3333333333333333,
  },
  "Ansi 8 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 9 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Background Color": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Background Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Background Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Cursor Color": {
    "Alpha Component": 1,
    "Blue Component": 0.6784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.6862745098039216,
    "Red Component": 0.6823529411764706,
  },
  "Cursor Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.6784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.6862745098039216,
    "Red Component": 0.6823529411764706,
  },
  "Cursor Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Cursor Text Color": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Cursor Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Cursor Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Foreground Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.2,
    "Color Space": "sRGB",
    "Green Component": 0.2,
    "Red Component": 0.2,
  },
  "Selected Text Color": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Selection Color": {
    "Alpha Component": 1,
    "Blue Component": 0.47058823529411764,
    "Color Space": "sRGB",
    "Green Component": 0.30980392156862746,
    "Red Component": 0.14901960784313725,
  },
  "Selection Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.47058823529411764,
    "Color Space": "sRGB",
    "Green Component": 0.30980392156862746,
    "Red Component": 0.14901960784313725,
  },
  "Selection Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 0.8392156862745098,
    "Red Component": 0.6784313725490196,
  },
}
`;

exports[`iTerm2 preset snapshots vsCodeClassic 1`] = `
{
  "Ansi 0 Color": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 1 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 10 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.0784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.807843137254902,
    "Red Component": 0.0784313725490196,
  },
  "Ansi 11 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.7294117647058823,
    "Red Component": 0.7098039215686275,
  },
  "Ansi 12 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 13 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 14 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 15 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.6470588235294118,
    "Red Component": 0.6470588235294118,
  },
  "Ansi 2 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.48627450980392156,
    "Red Component": 0.06274509803921569,
  },
  "Ansi 3 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.5803921568627451,
  },
  "Ansi 4 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 5 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 6 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 7 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.3333333333333333,
    "Color Space": "sRGB",
    "Green Component": 0.3333333333333333,
    "Red Component": 0.3333333333333333,
  },
  "Ansi 8 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 9 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Background Color": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Background Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Background Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Cursor Color": {
    "Alpha Component": 1,
    "Blue Component": 0.6784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.6862745098039216,
    "Red Component": 0.6823529411764706,
  },
  "Cursor Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.6784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.6862745098039216,
    "Red Component": 0.6823529411764706,
  },
  "Cursor Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Cursor Text Color": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Cursor Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Cursor Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Foreground Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.2,
    "Color Space": "sRGB",
    "Green Component": 0.2,
    "Red Component": 0.2,
  },
  "Selected Text Color": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Selection Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2549019607843137,
    "Color Space": "sRGB",
    "Green Component": 0.23921568627450981,
    "Red Component": 0.22745098039215686,
  },
  "Selection Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2549019607843137,
    "Color Space": "sRGB",
    "Green Component": 0.23921568627450981,
    "Red Component": 0.22745098039215686,
  },
  "Selection Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.9450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.9215686274509803,
    "Red Component": 0.8980392156862745,
  },
}
`;

exports[`iTerm2 preset snapshots vsCodePlus 1`] = `
{
  "Ansi 0 Color": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 1 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 10 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.0784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.807843137254902,
    "Red Component": 0.0784313725490196,
  },
  "Ansi 11 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.7294117647058823,
    "Red Component": 0.7098039215686275,
  },
  "Ansi 12 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 13 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 14 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 15 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.6470588235294118,
    "Red Component": 0.6470588235294118,
  },
  "Ansi 2 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.48627450980392156,
    "Red Component": 0.06274509803921569,
  },
  "Ansi 3 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.5803921568627451,
  },
  "Ansi 4 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 5 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 6 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 7 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.3333333333333333,
    "Color Space": "sRGB",
    "Green Component": 0.3333333333333333,
    "Red Component": 0.3333333333333333,
  },
  "Ansi 8 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 9 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Background Color": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Background Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Background Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Cursor Color": {
    "Alpha Component": 1,
    "Blue Component": 0.6784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.6862745098039216,
    "Red Component": 0.6823529411764706,
  },
  "Cursor Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.6784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.6862745098039216,
    "Red Component": 0.6823529411764706,
  },
  "Cursor Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Cursor Text Color": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Cursor Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Cursor Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Foreground Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.2,
    "Color Space": "sRGB",
    "Green Component": 0.2,
    "Red Component": 0.2,
  },
  "Selected Text Color": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Selection Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2549019607843137,
    "Color Space": "sRGB",
    "Green Component": 0.23921568627450981,
    "Red Component": 0.22745098039215686,
  },
  "Selection Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2549019607843137,
    "Color Space": "sRGB",
    "Green Component": 0.23921568627450981,
    "Red Component": 0.22745098039215686,
  },
  "Selection Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.9450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.9215686274509803,
    "Red Component": 0.8980392156862745,
  },
}
`;

exports[`iTerm2 preset snapshots vsCodeModern 1`] = `
{
  "Ansi 0 Color": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 1 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 10 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.0784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.807843137254902,
    "Red Component": 0.0784313725490196,
  },
  "Ansi 11 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.7294117647058823,
    "Red Component": 0.7098039215686275,
  },
  "Ansi 12 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 13 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 14 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 15 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.6470588235294118,
    "Red Component": 0.6470588235294118,
  },
  "Ansi 2 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.48627450980392156,
    "Red Component": 0.06274509803921569,
  },
  "Ansi 3 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.5803921568627451,
  },
  "Ansi 4 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 5 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 6 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 7 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.3333333333333333,
    "Color Space": "sRGB",
    "Green Component": 0.3333333333333333,
    "Red Component": 0.3333333333333333,
  },
  "Ansi 8 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 9 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Background Color": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Background Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Background Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Cursor Color": {
    "Alpha Component": 1,
    "Blue Component": 0.6784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.6862745098039216,
    "Red Component": 0.6823529411764706,
  },
  "Cursor Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.6784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.6862745098039216,
    "Red Component": 0.6823529411764706,
  },
  "Cursor Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7215686274509804,
    "Color Space": "sRGB",
    "Green Component": 0.37254901960784315,
    "Red Component": 0,
  },
  "Cursor Text Color": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Cursor Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.12156862745098039,
    "Color Space": "sRGB",
    "Green Component": 0.12156862745098039,
    "Red Component": 0.12156862745098039,
  },
  "Cursor Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Foreground Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.23137254901960785,
    "Color Space": "sRGB",
    "Green Component": 0.23137254901960785,
    "Red Component": 0.23137254901960785,
  },
  "Selected Text Color": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Selection Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2549019607843137,
    "Color Space": "sRGB",
    "Green Component": 0.23921568627450981,
    "Red Component": 0.22745098039215686,
  },
  "Selection Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2549019607843137,
    "Color Space": "sRGB",
    "Green Component": 0.23921568627450981,
    "Red Component": 0.22745098039215686,
  },
  "Selection Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.9450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.9215686274509803,
    "Red Component": 0.8980392156862745,
  },
}
`;

exports[`iTerm2 preset snapshots vsCode 1`] = `
{
  "Ansi 0 Color": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 0 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Ansi 1 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 1 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Ansi 10 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.5450980392156862,
    "Color Space": "sRGB",
    "Green Component": 0.8196078431372549,
    "Red Component": 0.13725490196078433,
  },
  "Ansi 10 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.0784313725490196,
    "Color Space": "sRGB",
    "Green Component": 0.807843137254902,
    "Red Component": 0.0784313725490196,
  },
  "Ansi 11 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2627450980392157,
    "Color Space": "sRGB",
    "Green Component": 0.9607843137254902,
    "Red Component": 0.9607843137254902,
  },
  "Ansi 11 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.7294117647058823,
    "Red Component": 0.7098039215686275,
  },
  "Ansi 12 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.9176470588235294,
    "Color Space": "sRGB",
    "Green Component": 0.5568627450980392,
    "Red Component": 0.23137254901960785,
  },
  "Ansi 12 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 13 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8392156862745098,
    "Color Space": "sRGB",
    "Green Component": 0.4392156862745098,
    "Red Component": 0.8392156862745098,
  },
  "Ansi 13 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 14 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.7215686274509804,
    "Red Component": 0.1607843137254902,
  },
  "Ansi 14 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 15 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 15 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.6470588235294118,
    "Red Component": 0.6470588235294118,
  },
  "Ansi 2 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4745098039215686,
    "Color Space": "sRGB",
    "Green Component": 0.7372549019607844,
    "Red Component": 0.050980392156862744,
  },
  "Ansi 2 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.48627450980392156,
    "Red Component": 0.06274509803921569,
  },
  "Ansi 3 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.06274509803921569,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 3 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.5803921568627451,
  },
  "Ansi 4 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7843137254901961,
    "Color Space": "sRGB",
    "Green Component": 0.4470588235294118,
    "Red Component": 0.1411764705882353,
  },
  "Ansi 4 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.6470588235294118,
    "Color Space": "sRGB",
    "Green Component": 0.3176470588235294,
    "Red Component": 0.01568627450980392,
  },
  "Ansi 5 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.24705882352941178,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 5 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.0196078431372549,
    "Red Component": 0.7372549019607844,
  },
  "Ansi 6 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.803921568627451,
    "Color Space": "sRGB",
    "Green Component": 0.6588235294117647,
    "Red Component": 0.06666666666666667,
  },
  "Ansi 6 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.7372549019607844,
    "Color Space": "sRGB",
    "Green Component": 0.596078431372549,
    "Red Component": 0.0196078431372549,
  },
  "Ansi 7 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.8980392156862745,
    "Red Component": 0.8980392156862745,
  },
  "Ansi 7 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.3333333333333333,
    "Color Space": "sRGB",
    "Green Component": 0.3333333333333333,
    "Red Component": 0.3333333333333333,
  },
  "Ansi 8 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 8 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.4,
    "Color Space": "sRGB",
    "Green Component": 0.4,
    "Red Component": 0.4,
  },
  "Ansi 9 Color": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.2980392156862745,
    "Color Space": "sRGB",
    "Green Component": 0.2980392156862745,
    "Red Component": 0.9450980392156862,
  },
  "Ansi 9 Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.19215686274509805,
    "Color Space": "sRGB",
    "Green Component": 0.19215686274509805,
    "Red Component": 0.803921568627451,
  },
  "Background Color": {
    "Alpha Component": 1,
    "Blue Component": 0.10588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.10196078431372549,
    "Red Component": 0.09803921568627451,
  },
  "Background Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.10588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.10196078431372549,
    "Red Component": 0.09803921568627451,
  },
  "Background Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Cursor Color": {
    "Alpha Component": 1,
    "Blue Component": 0.7490196078431373,
    "Color Space": "sRGB",
    "Green Component": 0.7490196078431373,
    "Red Component": 0.7490196078431373,
  },
  "Cursor Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.7490196078431373,
    "Color Space": "sRGB",
    "Green Component": 0.7490196078431373,
    "Red Component": 0.7490196078431373,
  },
  "Cursor Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.12549019607843137,
    "Color Space": "sRGB",
    "Green Component": 0.12549019607843137,
    "Red Component": 0.12549019607843137,
  },
  "Cursor Text Color": {
    "Alpha Component": 1,
    "Blue Component": 0.10588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.10196078431372549,
    "Red Component": 0.09803921568627451,
  },
  "Cursor Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.10588235294117647,
    "Color Space": "sRGB",
    "Green Component": 0.10196078431372549,
    "Red Component": 0.09803921568627451,
  },
  "Cursor Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Foreground Color": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.8,
    "Color Space": "sRGB",
    "Green Component": 0.8,
    "Red Component": 0.8,
  },
  "Foreground Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.23137254901960785,
    "Color Space": "sRGB",
    "Green Component": 0.23137254901960785,
    "Red Component": 0.23137254901960785,
  },
  "Selected Text Color": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 1,
    "Color Space": "sRGB",
    "Green Component": 1,
    "Red Component": 1,
  },
  "Selected Text Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0,
    "Color Space": "sRGB",
    "Green Component": 0,
    "Red Component": 0,
  },
  "Selection Color": {
    "Alpha Component": 1,
    "Blue Component": 0.23137254901960785,
    "Color Space": "sRGB",
    "Green Component": 0.19607843137254902,
    "Red Component": 0.12156862745098039,
  },
  "Selection Color (Dark)": {
    "Alpha Component": 1,
    "Blue Component": 0.23137254901960785,
    "Color Space": "sRGB",
    "Green Component": 0.19607843137254902,
    "Red Component": 0.12156862745098039,
  },
  "Selection Color (Light)": {
    "Alpha Component": 1,
    "Blue Component": 0.9686274509803922,
    "Color Space": "sRGB",
    "Green Component": 0.9137254901960784,
    "Red Component": 0.8509803921568627,
  },
}
`;

exports[`Warp preset snapshots base light 1`] = `
{
  "accent": "#0451A5",
  "background": "#FFFFFF",
  "cursor": "#000000",
  "details": "lighter",
  "foreground": "#333333",
  "name": "Base Light",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#14CE14",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#A5A5A5",
      "yellow": "#B5BA00",
    },
    "normal": {
      "black": "#000000",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#107C10",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#555555",
      "yellow": "#949800",
    },
  },
}
`;

exports[`Warp preset snapshots base dark 1`] = `
{
  "accent": "#2472C8",
  "background": "#1F1F1F",
  "cursor": "#AEAFAD",
  "details": "darker",
  "foreground": "#CCCCCC",
  "name": "Base Dark",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#3B8EEA",
      "cyan": "#29B8DB",
      "green": "#23D18B",
      "magenta": "#D670D6",
      "red": "#F14C4C",
      "white": "#E5E5E5",
      "yellow": "#F5F543",
    },
    "normal": {
      "black": "#000000",
      "blue": "#2472C8",
      "cyan": "#11A8CD",
      "green": "#0DBC79",
      "magenta": "#BC3FBC",
      "red": "#CD3131",
      "white": "#E5E5E5",
      "yellow": "#E5E510",
    },
  },
}
`;

exports[`Warp preset snapshots vsCodeClassic light 1`] = `
{
  "accent": "#0451A5",
  "background": "#FFFFFF",
  "cursor": "#000000",
  "details": "lighter",
  "foreground": "#333333",
  "name": "VS Code Classic Light",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#14CE14",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#A5A5A5",
      "yellow": "#B5BA00",
    },
    "normal": {
      "black": "#000000",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#107C10",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#555555",
      "yellow": "#949800",
    },
  },
}
`;

exports[`Warp preset snapshots vsCodeClassic dark 1`] = `
{
  "accent": "#2472C8",
  "background": "#1F1F1F",
  "cursor": "#AEAFAD",
  "details": "darker",
  "foreground": "#CCCCCC",
  "name": "VS Code Classic Dark",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#3B8EEA",
      "cyan": "#29B8DB",
      "green": "#23D18B",
      "magenta": "#D670D6",
      "red": "#F14C4C",
      "white": "#E5E5E5",
      "yellow": "#F5F543",
    },
    "normal": {
      "black": "#000000",
      "blue": "#2472C8",
      "cyan": "#11A8CD",
      "green": "#0DBC79",
      "magenta": "#BC3FBC",
      "red": "#CD3131",
      "white": "#E5E5E5",
      "yellow": "#E5E510",
    },
  },
}
`;

exports[`Warp preset snapshots vsCodePlus light 1`] = `
{
  "accent": "#0451A5",
  "background": "#FFFFFF",
  "cursor": "#000000",
  "details": "lighter",
  "foreground": "#333333",
  "name": "VS Code Plus Light",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#14CE14",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#A5A5A5",
      "yellow": "#B5BA00",
    },
    "normal": {
      "black": "#000000",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#107C10",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#555555",
      "yellow": "#949800",
    },
  },
}
`;

exports[`Warp preset snapshots vsCodePlus dark 1`] = `
{
  "accent": "#2472C8",
  "background": "#1F1F1F",
  "cursor": "#AEAFAD",
  "details": "darker",
  "foreground": "#CCCCCC",
  "name": "VS Code Plus Dark",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#3B8EEA",
      "cyan": "#29B8DB",
      "green": "#23D18B",
      "magenta": "#D670D6",
      "red": "#F14C4C",
      "white": "#E5E5E5",
      "yellow": "#F5F543",
    },
    "normal": {
      "black": "#000000",
      "blue": "#2472C8",
      "cyan": "#11A8CD",
      "green": "#0DBC79",
      "magenta": "#BC3FBC",
      "red": "#CD3131",
      "white": "#E5E5E5",
      "yellow": "#E5E510",
    },
  },
}
`;

exports[`Warp preset snapshots vsCodeModern light 1`] = `
{
  "accent": "#005FB8",
  "background": "#FFFFFF",
  "cursor": "#005FB8",
  "details": "lighter",
  "foreground": "#3B3B3B",
  "name": "VS Code Modern Light",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#14CE14",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#A5A5A5",
      "yellow": "#B5BA00",
    },
    "normal": {
      "black": "#000000",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#107C10",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#555555",
      "yellow": "#949800",
    },
  },
}
`;

exports[`Warp preset snapshots vsCodeModern dark 1`] = `
{
  "accent": "#0078D4",
  "background": "#1F1F1F",
  "cursor": "#AEAFAD",
  "details": "darker",
  "foreground": "#CCCCCC",
  "name": "VS Code Modern Dark",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#3B8EEA",
      "cyan": "#29B8DB",
      "green": "#23D18B",
      "magenta": "#D670D6",
      "red": "#F14C4C",
      "white": "#E5E5E5",
      "yellow": "#F5F543",
    },
    "normal": {
      "black": "#000000",
      "blue": "#2472C8",
      "cyan": "#11A8CD",
      "green": "#0DBC79",
      "magenta": "#BC3FBC",
      "red": "#CD3131",
      "white": "#E5E5E5",
      "yellow": "#E5E510",
    },
  },
}
`;

exports[`Warp preset snapshots vsCode light 1`] = `
{
  "accent": "#005FB8",
  "background": "#FFFFFF",
  "cursor": "#202020",
  "details": "lighter",
  "foreground": "#3B3B3B",
  "name": "VS Code Light",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#14CE14",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#A5A5A5",
      "yellow": "#B5BA00",
    },
    "normal": {
      "black": "#000000",
      "blue": "#0451A5",
      "cyan": "#0598BC",
      "green": "#107C10",
      "magenta": "#BC05BC",
      "red": "#CD3131",
      "white": "#555555",
      "yellow": "#949800",
    },
  },
}
`;

exports[`Warp preset snapshots vsCode dark 1`] = `
{
  "accent": "#2472C8",
  "background": "#191A1B",
  "cursor": "#BFBFBF",
  "details": "darker",
  "foreground": "#CCCCCC",
  "name": "VS Code Dark",
  "terminal_colors": {
    "bright": {
      "black": "#666666",
      "blue": "#3B8EEA",
      "cyan": "#29B8DB",
      "green": "#23D18B",
      "magenta": "#D670D6",
      "red": "#F14C4C",
      "white": "#E5E5E5",
      "yellow": "#F5F543",
    },
    "normal": {
      "black": "#000000",
      "blue": "#2472C8",
      "cyan": "#11A8CD",
      "green": "#0DBC79",
      "magenta": "#BC3FBC",
      "red": "#CD3131",
      "white": "#E5E5E5",
      "yellow": "#E5E510",
    },
  },
}
`;
